deploy/deployment.yml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dubbo-ca
  namespace: dubbo-system
  labels:
    app: dubbo-ca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dubbo-ca
  template:
    metadata:
      labels:
        app: dubbo-ca
    spec:
      serviceAccountName: dubbo-ca
      containers:
        - name: ca
          image: albumen/dubbo-ca:1.0.0
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dubbo-ca
  namespace: dubbo-system
  labels:
    app: dubbo-ca
spec:
  ports:
    - port: 30060
      name: grpc
      protocol: TCP
    - port: 30062
      name: grpc-secure
      protocol: TCP
    - port: 30080
      name: http
      protocol: TCP
  selector:
    app: dubbo-ca
---
