deploy/example-peerauthentication.yaml
apiVersion: dubbo.apache.org/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default
  namespace: dubbo-demo-new
spec:
  action: ALLOW
  rules:
    -  from:
        namespaces: ["dubbo-demo"]
  samples: 0.12
